--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     },
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
+        "@akanass/rx-http-request": "^2.1.1",
         "@hapiness/core": "^1.0.0-beta.2",
         "debug": "^2.6.3",
         "rxjs": "^5.3.0"
