feat(tsconfig): Extended tsconfig files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
             "boom",
             "hapi",
             "hoek",
-            "joi",
-            "fs-extra"
+            "joi"
         ],
         "lib": [
             "dom",
