--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hapiness/http",
-    "version": "1.0.0-beta.6",
+    "version": "1.0.0-rc.3",
     "description": "Http Module for the Hapiness framework, allowing user to deal with http request",
     "main": "index.js",
     "types": "index.d.ts",
@@ -70,20 +70,20 @@
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
         "@akanass/rx-http-request": "^2.3.0",
-        "@hapiness/core": "^1.0.0-beta.6",
-        "rxjs": "^5.4.0"
+        "@hapiness/core": "^1.0.0-rc.3",
+        "rxjs": "^5.4.1"
     },
     "devDependencies": {
-        "@types/fs-extra": "^3.0.2",
+        "@types/fs-extra": "^3.0.3",
         "coveralls": "^2.13.1",
         "fs-extra": "^3.0.1",
         "istanbul": "^1.1.0-alpha.1",
         "mocha": "^3.4.2",
-        "mocha-typescript": "^1.1.4",
+        "mocha-typescript": "^1.1.5",
         "rimraf": "^2.6.1",
-        "ts-node": "^3.0.4",
-        "tslint": "^5.3.2",
-        "typescript": "^2.3.3",
+        "ts-node": "^3.1.0",
+        "tslint": "^5.4.3",
+        "typescript": "^2.4.1",
         "unit.js": "^2.0.0"
     },
     "engines": {
