--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
         "@akanass/rx-http-request": "^2.3.0",
-        "@hapiness/core": "^1.0.0-rc.3",
-        "rxjs": "^5.4.1"
+        "@hapiness/core": "^1.0.0-rc.3"
     },
     "devDependencies": {
         "@types/fs-extra": "^3.0.3",
