--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hapiness/http",
-    "version": "1.0.0-rc.3",
+    "version": "1.0.0-rc.4",
     "description": "Http Module for the Hapiness framework, allowing user to deal with http request",
     "main": "index.js",
     "types": "index.d.ts",
@@ -19,8 +19,7 @@
         "url": "git+ssh://git@github.com/hapinessjs/http-module.git"
     },
     "keywords": [
-        "HapiJS",
-        "Hapi",
+        "Request",
         "Hapiness",
         "Framework",
         "NodeJS",
@@ -56,7 +55,7 @@
         },
         {
             "name": "Sébastien Ritz",
-            "url": "https://github.com/srz09"
+            "url": "https://github.com/reptilbud"
         },
         {
             "name": "Nicolas Jessel",
@@ -69,8 +68,8 @@
     },
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
-        "@akanass/rx-http-request": "^2.3.0",
-        "@hapiness/core": "^1.0.0-rc.3"
+        "@akanass/rx-http-request": "^2.4.0",
+        "@hapiness/core": "^1.0.0-rc.4"
     },
     "devDependencies": {
         "@types/fs-extra": "^3.0.3",
@@ -78,10 +77,10 @@
         "fs-extra": "^3.0.1",
         "istanbul": "^1.1.0-alpha.1",
         "mocha": "^3.4.2",
-        "mocha-typescript": "^1.1.5",
+        "mocha-typescript": "^1.1.7",
         "rimraf": "^2.6.1",
-        "ts-node": "^3.1.0",
-        "tslint": "^5.4.3",
+        "ts-node": "^3.2.0",
+        "tslint": "^5.5.0",
         "typescript": "^2.4.1",
         "unit.js": "^2.0.0"
     },
