--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hapiness/http",
-    "version": "1.0.0-rc.4",
+    "version": "1.0.0-rc.6",
     "description": "Http Module for the Hapiness framework, allowing user to deal with http request",
     "main": "index.js",
     "types": "index.d.ts",
@@ -69,16 +69,18 @@
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
         "@akanass/rx-http-request": "^2.4.0",
-        "@hapiness/core": "^1.0.0-rc.4"
+        "@types/node": "^8.0.13"
     },
     "devDependencies": {
+        "@hapiness/core": "^1.0.0-rc.6",
         "@types/fs-extra": "^3.0.3",
         "coveralls": "^2.13.1",
-        "fs-extra": "^3.0.1",
+        "fs-extra": "^4.0.0",
         "istanbul": "^1.1.0-alpha.1",
         "mocha": "^3.4.2",
         "mocha-typescript": "^1.1.7",
         "rimraf": "^2.6.1",
+        "rxjs": "^5.4.2",
         "ts-node": "^3.2.0",
         "tslint": "^5.5.0",
         "typescript": "^2.4.1",
@@ -86,5 +88,9 @@
     },
     "engines": {
         "node": ">=7.0.0"
+    },
+    "peerDependencies": {
+        "@hapiness/core": "^1.0.0-rc.6",
+        "rxjs": "^5.4.2"
     }
 }
