--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hapiness/http",
-    "version": "1.0.0-rc.6",
+    "version": "1.0.0-rc.7",
     "description": "Http Module for the Hapiness framework, allowing user to deal with http request",
     "main": "index.js",
     "types": "index.d.ts",
@@ -68,12 +68,14 @@
     },
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
-        "@akanass/rx-http-request": "^2.4.0",
+        "@akanass/rx-http-request": "^2.6.0",
         "@types/node": "^8.0.13"
     },
     "devDependencies": {
-        "@hapiness/core": "^1.0.0-rc.6",
-        "@types/fs-extra": "^3.0.3",
+        "@hapiness/biim": "^1.1.0",
+        "@hapiness/core": "^1.0.0-rc.7",
+        "@types/fs-extra": "^4.0.2",
+        "@types/joi": "^10.4.2",
         "coveralls": "^2.13.1",
         "fs-extra": "^4.0.0",
         "istanbul": "^1.1.0-alpha.1",
@@ -90,7 +92,8 @@
         "node": ">=7.0.0"
     },
     "peerDependencies": {
-        "@hapiness/core": "^1.0.0-rc.6",
-        "rxjs": "^5.4.2"
+        "@hapiness/biim": "^1.1.0",
+        "@hapiness/core": "^1.0.0-rc.7",
+        "rxjs": "^5.4.3"
     }
 }
