--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     },
     "devDependencies": {
         "@hapiness/biim": "^1.1.0",
-        "@hapiness/core": "^1.0.0-rc.7",
+        "@hapiness/core": "1.0.0-rc.7",
         "@types/fs-extra": "^4.0.2",
         "@types/joi": "^10.4.2",
         "coveralls": "^2.13.1",
@@ -93,7 +93,7 @@
     },
     "peerDependencies": {
         "@hapiness/biim": "^1.1.0",
-        "@hapiness/core": "^1.0.0-rc.7",
+        "@hapiness/core": "1.0.0-rc.7",
         "rxjs": "^5.4.3"
     }
 }
