--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,8 +1,9 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": ".",
-        "rootDir": "./src"
+        "outDir": "./dist/commonjs",
+        "rootDir": "./src",
+        "declarationDir": "./dist"
     },
     "exclude": [
         "node_modules",
