--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "./dist/commonjs",
-        "rootDir": "./src",
-        "declarationDir": "./dist"
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
     "exclude": [
         "node_modules",
