--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hapiness/http",
-    "version": "1.2.1",
+    "version": "1.1.2",
     "description": "Http Module for the Hapiness framework, allowing user to deal with http request",
     "main": "index.js",
     "types": "index.d.ts",
@@ -69,12 +69,11 @@
     "homepage": "https://github.com/hapinessjs/http-module#readme",
     "dependencies": {
         "@akanass/rx-http-request": "^2.7.1",
-        "@types/node": "^9.4.0",
-        "lodash.clonedeep": "^4.5.0"
+        "@types/node": "^9.4.0"
     },
     "devDependencies": {
         "@hapiness/biim": "^1.4.0",
-        "@hapiness/core": "^1.5.5",
+        "@hapiness/core": "^1.3.0",
         "@types/fs-extra": "^5.0.0",
         "@types/joi": "^13.0.5",
         "coveralls": "^3.0.0",
@@ -94,7 +93,7 @@
     },
     "peerDependencies": {
         "@hapiness/biim": "^1.4.0",
-        "@hapiness/core": "^1.5.5",
+        "@hapiness/core": "^1.3.0",
         "rxjs": "^5.5.6"
     }
 }
